// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<RadioButton /> > Snapshots > should match snapshot with checked and disabled prop 1`] = `
<div>
  <label
    class="RadioButton_label__1rnz0nz2"
  >
    <input
      class="RadioButton_field__1rnz0nz3"
      disabled=""
      type="radio"
    />
    <span
      class="RadioButton_icon__1rnz0nz0"
    />
    <span
      class="RadioButton_text__1rnz0nz1"
    />
  </label>
</div>
`;

exports[`<RadioButton /> > Snapshots > should match snapshot with checked prop 1`] = `
<div>
  <label
    class="RadioButton_label__1rnz0nz2"
  >
    <input
      class="RadioButton_field__1rnz0nz3"
      type="radio"
    />
    <span
      class="RadioButton_icon__1rnz0nz0"
    />
    <span
      class="RadioButton_text__1rnz0nz1"
    />
  </label>
</div>
`;

exports[`<RadioButton /> > Snapshots > should match snapshot with disabled prop 1`] = `
<div>
  <label
    class="RadioButton_label__1rnz0nz2"
  >
    <input
      class="RadioButton_field__1rnz0nz3"
      disabled=""
      type="radio"
    />
    <span
      class="RadioButton_icon__1rnz0nz0"
    />
    <span
      class="RadioButton_text__1rnz0nz1"
    />
  </label>
</div>
`;

exports[`<RadioButton /> > Snapshots > should match snapshot without props 1`] = `
<div>
  <label
    class="RadioButton_label__1rnz0nz2"
  >
    <input
      class="RadioButton_field__1rnz0nz3"
      type="radio"
    />
    <span
      class="RadioButton_icon__1rnz0nz0"
    />
    <span
      class="RadioButton_text__1rnz0nz1"
    />
  </label>
</div>
`;
